[metadata]
name = meta-outliers
version = 1.0.0
author = Ahmet Zahid Balcıoğlu
author_email = zahidbalcioglu@gmail.com
description = Research oriented library for outlier detection.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Selozhd/meta-outliers
project_urls =
    Bug Tracker = https://github.com/Selozhd/meta-outliers/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = outliers
packages = find:
python_requires = >=3.6

[options.packages.find]
where = outliers
